# Mouse-size

./: Cargo.toml  README.md  Sitios turísticos culturales.txt  index.html  mouse_size-f86f78e4e8bc732f.js  mouse_size-f86f78e4e8bc732f_bg.wasm
src/: app.rs  main.rs
wix/: main.wxs
